5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4470/executions/1712_2498.log
== TEST (2019-05-13 14:28:14) 
-- CODE:
na=int(input("Numero de habitantes de A:"))
nb=int(input("Numero de habitantes de B:"))
pa=float(input("Percentual populacional de A:"))
pb=float(input("Percentual populacional de B:"))

cna=na+((na*pa)/100)
cnb=nb+((nb*pb)/100)
t=1
while(na<nb):
	cna=na+((na*pa)/100)
	cnb=nb+((nb*pb)/100)
	ct=t+1
print(ct)
-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:28:44) 
-- CODE:
na=int(input("Numero de habitantes de A:"))
nb=int(input("Numero de habitantes de B:"))
pa=float(input("Percentual populacional de A:"))
pb=float(input("Percentual populacional de B:"))

cna=na+((na*pa)/100)
cnb=nb+((nb*pb)/100)
t=1
while(na<nb):
	cna=na+((na*pa)/100)
	cnb=nb+((nb*pb)/100)
	ct=t+1
	print(ct)
-- OUTPUT:
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:30:34) 
-- CODE:
na=int(input("Numero de habitantes de A:"))
nb=int(input("Numero de habitantes de B:"))
pa=float(input("Percentual populacional de A:"))
pb=float(input("Percentual populacional de B:"))

cna=na+((na*pa)/100)
cnb=nb+((nb*pb)/100)
ct=1
while(na<nb):
	cna=na+((na*pa)/100)
	cnb=nb+((nb*pb)/100)
	ct=t+1
print(ct)
-- EXECUTION TIME:
0.737596
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2498/main.py", line 12, in <module>
    ct=t+1
NameError: name 't' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:30:35) 
-- CODE:
na=int(input("Numero de habitantes de A:"))
nb=int(input("Numero de habitantes de B:"))
pa=float(input("Percentual populacional de A:"))
pb=float(input("Percentual populacional de B:"))

cna=na+((na*pa)/100)
cnb=nb+((nb*pb)/100)
ct=1
while(na<nb):
	cna=na+((na*pa)/100)
	cnb=nb+((nb*pb)/100)
	ct=t+1
print(ct)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    ct=t+1
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:31:08) 
-- CODE:
na=int(input("Numero de habitantes de A:"))
nb=int(input("Numero de habitantes de B:"))
pa=float(input("Percentual populacional de A:"))
pb=float(input("Percentual populacional de B:"))

cna=na+((na*pa)/100)
cnb=nb+((nb*pb)/100)
ct=1
while(na<nb):
	cna=na+((na*pa)/100)
	cnb=nb+((nb*pb)/100)
	ct=ct1
print(ct)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    ct=ct1
NameError: name 'ct1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:31:19) 
-- CODE:
na=int(input("Numero de habitantes de A:"))
nb=int(input("Numero de habitantes de B:"))
pa=float(input("Percentual populacional de A:"))
pb=float(input("Percentual populacional de B:"))

cna=na+((na*pa)/100)
cnb=nb+((nb*pb)/100)
ct=1
while(na<nb):
	cna=na+((na*pa)/100)
	cnb=nb+((nb*pb)/100)
	ct=ct+1
print(ct)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    ct=ct1
NameError: name 'ct1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:31:44) 
-- CODE:
na=int(input("Numero de habitantes de A:"))
nb=int(input("Numero de habitantes de B:"))
pa=float(input("Percentual populacional de A:"))
pb=float(input("Percentual populacional de B:"))

cna=na+((na*pa)/100)
cnb=nb+((nb*pb)/100)
ct=1
while(na<nb):
	cna=na+((na*pa)/100)
	cnb=nb+((nb*pb)/100)
	ct=ct+1
print(ct)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    ct=ct1
NameError: name 'ct1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:33:31) 
-- CODE:
na=int(input("Numero de habitantes de A:"))
nb=int(input("Numero de habitantes de B:"))
pa=float(input("Percentual populacional de A:"))
pb=float(input("Percentual populacional de B:"))

cna=na+((na*pa)/100)
cnb=nb+((nb*pb)/100)
ct=1
while(na<nb):
	cna=cn+((na*pa)/100)
	cnb=cnb((nb*pb)/100)
	ct=ct+1
print(ct)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    cna=cn+((na*pa)/100)
NameError: name 'cn' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:33:35) 
-- CODE:
na=int(input("Numero de habitantes de A:"))
nb=int(input("Numero de habitantes de B:"))
pa=float(input("Percentual populacional de A:"))
pb=float(input("Percentual populacional de B:"))

cna=na+((na*pa)/100)
cnb=nb+((nb*pb)/100)
ct=1
while(na<nb):
	cna=cna((na*pa)/100)
	cnb=cnb((nb*pb)/100)
	ct=ct+1
print(ct)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    cna=cna((na*pa)/100)
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:34:08) 
-- CODE:
na=int(input("Numero de habitantes de A:"))
nb=int(input("Numero de habitantes de B:"))
pa=float(input("Percentual populacional de A:"))
pb=float(input("Percentual populacional de B:"))

cna=na+((na*pa)/100)
cnb=nb+((nb*pb)/100)
ct=1
while(na<nb):
	cna=cna((cna*pa/100)
	cnb=cnb((cnb*pb/100)
	ct=ct+1
print(ct)
-- ERROR:
File "XXXX", line 11
    cnb=cnb((cnb*pb/100)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:35:05) 
-- CODE:
na=int(input("Numero de habitantes de A:"))
nb=int(input("Numero de habitantes de B:"))
pa=float(input("Percentual populacional de A:"))
pb=float(input("Percentual populacional de B:"))

cna=na+((na*pa)/100)
cnb=nb+((nb*pb)/100)
ct=1
while(na<nb):
	cna=cna+((cna*pa)/100)
	cnb=cnb+((cnb*pb)/100)
	ct=ct+1
print(ct)
-- ERROR:
File "XXXX", line 11
    cnb=cnb((cnb*pb/100)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:36:07) 
-- CODE:
na=int(input("Numero de habitantes de A:"))
nb=int(input("Numero de habitantes de B:"))
pa=float(input("Percentual populacional de A:"))
pb=float(input("Percentual populacional de B:"))

cna=na+((na*pa)/100)
cnb=nb+((nb*pb)/100)
ct=1
while(cna<cnb):
	cna=cna+((cna*pa)/100)
	cnb=cnb+((cnb*pb)/100)
	ct=ct+1
print(ct)
-- EXECUTION TIME:
0.764247
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
5
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:36:09) 
-- CODE:
na=int(input("Numero de habitantes de A:"))
nb=int(input("Numero de habitantes de B:"))
pa=float(input("Percentual populacional de A:"))
pb=float(input("Percentual populacional de B:"))

cna=na+((na*pa)/100)
cnb=nb+((nb*pb)/100)
ct=1
while(cna<cnb):
	cna=cna+((cna*pa)/100)
	cnb=cnb+((cnb*pb)/100)
	ct=ct+1
print(ct)
-- EXECUTION TIME:
0.78462
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:36:10) 
-- CODE:
na=int(input("Numero de habitantes de A:"))
nb=int(input("Numero de habitantes de B:"))
pa=float(input("Percentual populacional de A:"))
pb=float(input("Percentual populacional de B:"))

cna=na+((na*pa)/100)
cnb=nb+((nb*pb)/100)
ct=1
while(cna<cnb):
	cna=cna+((cna*pa)/100)
	cnb=cnb+((cnb*pb)/100)
	ct=ct+1
print(ct)
-- EXECUTION TIME:
0.818065
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:48:03) 
-- CODE:
na=int(input("Numero de habitantes de A:"))
nb=int(input("Numero de habitantes de B:"))
pa=float(input("Percentual populacional de A:"))
pb=float(input("Percentual populacional de B:"))

cna=na+((na*pa)/100)
cnb=nb+((nb*pb)/100)
t=1
while(na<nb):
	cna=na+((na*pa)/100)
	cnb=nb+((nb*pb)/100)
	ct=t+1
print(ct)
-- EXECUTION TIME:
1196.12
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:53:02) 
-- CODE:
na=int(input("Numero de habitantes de A:"))
nb=int(input("Numero de habitantes de B:"))
pa=float(input("Percentual populacional de A:"))
pb=float(input("Percentual populacional de B:"))

cna=na+((na*pa)/100)
cnb=nb+((nb*pb)/100)
ct=1
while(na<nb):
	cna=na+((na*pa)/100)
	cnb=nb+((nb*pb)/100)
	ct=ct+1
print(ct)
-- EXECUTION TIME:
1287.05
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:56:02) 
-- CODE:
na=int(input("Numero de habitantes de A:"))
nb=int(input("Numero de habitantes de B:"))
pa=float(input("Percentual populacional de A:"))
pb=float(input("Percentual populacional de B:"))

cna=na+((na*pa)/100)
cnb=nb+((nb*pb)/100)
ct=1
while(na<nb):
	cna=cna+((cna*pa)/100)
	cnb=cnb+((cnb*pb)/100)
	ct=ct+1
print(ct)
-- EXECUTION TIME:
1243.05
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:59:03) 
-- CODE:
na=int(input("Numero de habitantes de A:"))
nb=int(input("Numero de habitantes de B:"))
pa=float(input("Percentual populacional de A:"))
pb=float(input("Percentual populacional de B:"))

cna=na+((na*pa)/100)
cnb=nb+((nb*pb)/100)
ct=1
while(cna<cnb):
	cna=cna+((cna*pa)/100)
	cnb=cnb+((cnb*pb)/100)
	ct=ct+1
print(ct)
-- EXECUTION TIME:
0.13865
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
